# llts

./: .gitignore  Cargo.toml  GUIDE.md  LICENSE  README.md  tsconfig.json
.cargo/: config.toml
.github/workflows/: release.yml
benchmarks/: ackermann.ts  euler_sum.ts  fib.ts  leibniz_pi.ts  mandelbrot.ts  nbody.ts  run.sh  run_bun.ts  sieve.ts  spectral_norm.ts
crates/llts_analysis/: Cargo.toml
crates/llts_analysis/src/: borrow.rs  lib.rs  monomorph.rs  ownership.rs  types.rs  validate.rs
crates/llts_cli/: Cargo.toml
crates/llts_cli/src/: main.rs
crates/llts_codegen/: Cargo.toml
crates/llts_codegen/src/: call.rs  expr.rs  intrinsics.rs  lib.rs  memory.rs  narrowing.rs  stdlib.rs  stmt.rs  types.rs
crates/llts_driver/: Cargo.toml
crates/llts_driver/src/: lib.rs  linker.rs
crates/llts_driver/src/pipeline/: compile.rs  context.rs  exprs.rs  generics.rs  mod.rs  stmts.rs  types.rs  unions.rs  utils.rs
crates/llts_frontend/: Cargo.toml
crates/llts_frontend/src/: lib.rs  parse.rs  resolve.rs  semantic.rs
docs/architecture/: desugaring.md  pipeline.md  project-structure.md
docs/features/: classes.md  enums.md  error-handling.md  functions.md  generics.md  iterators.md  memory-model.md  modules.md  narrowing.md  numeric-types.md  stdlib.md  type-system.md  unions.md
docs/rejected/: decorators.md
docs/v2/: async.md  collections.md  generators.md
editor/vscode/llts/: extension.js  llts-prelude.d.ts  package.json
editor/vscode/llts/llts-ts-plugin/: index.js  package.json
examples/: casting.ts  chained_imports.ts  fibonacci.ts  hello.ts  imports.ts  math_lib.ts  ownership.ts  physics_lib.ts  structs.ts  types_lib.ts
examples/game/: main.ts  sim.ts
examples/game/entities/: entity.ts  spawner.ts
examples/game/math/: utils.ts  vec2.ts
std/: prelude.ts
tests/compile/: arrow_functions.ts  basic_function.ts  control_flow.ts  string_ops.ts
tests/error/: any_type.ts  eval.ts
tests/run/: arithmetic.ts  array_indexing.ts  array_indexof.ts  array_length.ts  array_push_pop.ts  array_type_coercion.ts  arrays.ts  arrow_functions.ts  binary_ops.ts  boolean_ops.ts  break_continue.ts  classes.ts  compound_assignment.ts  discriminated_union.ts  enum_as_type.ts  enum_initializers.ts  enums.ts  for_loop.ts  for_of.ts  for_of_infer.ts  for_of_toplevel.ts  functions.ts  generic_constraints.ts  generic_defaults.ts  generics.ts  hello.ts  if_else.ts  implicit_widening.ts  import_lib.ts  imports.ts  math_extras.ts  math_intrinsics.ts  nested_control.ts  nullable.ts  numeric_types.ts  numeric_union.ts  recursion.ts  string_length.ts  string_literal_union.ts  string_methods.ts  (+13 more)
