[workspace]
resolver = "2"
members = [
    "crates/llts_frontend",
    "crates/llts_analysis",
    "crates/llts_codegen",
    "crates/llts_driver",
    "crates/llts_cli",  # package name: llts
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bherbruck/llts"

[workspace.dependencies]
# oxc frontend
oxc_allocator = "0.113"
oxc_ast = "0.113"
oxc_diagnostics = "0.113"
oxc_parser = "0.113"
oxc_resolver = "11"
oxc_semantic = "0.113"
oxc_span = "0.113"

# llvm backend
inkwell = { version = "0.8.0", features = ["llvm21-1"] }

# workspace crates
llts_frontend = { version = "0.1.0", path = "crates/llts_frontend" }
llts_analysis = { version = "0.1.0", path = "crates/llts_analysis" }
llts_codegen = { version = "0.1.0", path = "crates/llts_codegen" }
llts_driver = { version = "0.1.0", path = "crates/llts_driver" }
