[package]
name = "llts_analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLTS analysis — subset validation and type resolution"

[dependencies]
llts_frontend.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
thiserror = "2"
