[package]
name = "llts_frontend"
version.workspace = true
edition.workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_diagnostics.workspace = true
oxc_parser.workspace = true
oxc_resolver.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
